manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
    nginx.com/health-checks: "true"
    nginx.org/websocket-services: "gateway-service"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/grpc-services: "gateway-service"
spec:
  tls:
  - secretName: beneath-network-tls
    hosts:
    - data.beneath.network
    - control.beneath.network
    - beneath.network
    - www.beneath.network
  rules:
  - host: control.beneath.network
    http:
      paths:
      - path: /*
        backend:
          serviceName: control-service
          servicePort: 8080
  - host: data.beneath.network
    http:
      paths:
      - path: /proto.Gateway
        backend:
          serviceName: gateway-service
          servicePort: 9090
      - path: /*
        backend:
          serviceName: gateway-service
          servicePort: 8080
  - host: beneath.network
    http:
      paths:
      - path: /*
        backend:
          serviceName: frontend-service
          servicePort: 8080
  - host: www.beneath.network
    http:
      paths:
      - path: /*
        backend:
          serviceName: frontend-service
          servicePort: 8080
